--- a/new2.html
+++ b/new2.html
@@ -3,12 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Sửa đổi lần 4</title>
   </head>
   <body>
-    <h1>Dự Án 3</h1>
-    <h2>Sửa đổi lần 1</h2>
-    <h2>Sửa đổi lần 2</h2>
-    <h2>Sửa đổi lần 3</h2>
+    <h1>Truy cập Google Chrome</h1>
+    <a href="https://www.google.com.vn/">Nhấn vào đây để truy cập Chrome</a>
   </body>
 </html>
